--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 			<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 		</div>
 	</header>
+
+	<nav id="nav_menu">
+		<ul> 
+		<li><a href="index.html">Home</a></li>
+		<li><a href="speakers.html">Speakers</a></li>
+		<li><a href="luncheons.html"></a>Luncheons</li>
+		<li><a href="about.html"></a>About us</li>
+		<li><a href="tickets.html"></a>Tickets</li>
+		</ul>
+		</nav>
+
 	<main>
 		<section>
 			<h2>Our Mission</h2>
