--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
 	<nav id="nav_menu">
 		<ul> 
-		<li><a href="index.html">Home</a></li>
-		<li><a href="speakers.html">Speakers</a></li>
-		<li><a href="luncheons.html"></a>Luncheons</li>
-		<li><a href="about.html"></a>About us</li>
-		<li><a href="tickets.html"></a>Tickets</li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="speakers.html">Speakers</a></li>
+			<li><a href="luncheons.html">Luncheons</a></li>
+			<li><a href="about.html">About us</a></li>
+			<li><a href="tickets.html">Tickets</a></li>
 		</ul>
-		</nav>
+	</nav>
 
 	<main>
 		<section>
