--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <title>San Joaquin Valley Town Hall</title>
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/slicknav.css">
     <link rel="stylesheet" href="styles/main.css">
-    <meta name="viewport" content="width=500, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="js/jquery.slicknav.min.js">
+    <script src="js/jquery.slicknav.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function()
         {
@@ -17,8 +16,6 @@
         });
     </script>
 </head>
-
-
 <body>
     <header>
         <img src="images/town_hall_logo.gif" alt="Town Hall logo">
@@ -28,7 +25,7 @@
         </div>
     </header>
 
-<nav id="mobilemenu"> </nav>
+    <nav id="mobilemenu"> </nav>
 
     <nav id="nav_menu">
         <ul>
@@ -86,5 +83,4 @@
         <p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
     </footer>
 </body>
-
 </html>
